--- a/pipelines/templates/plan.yml
+++ b/pipelines/templates/plan.yml
@@ -10,3 +10,4 @@ steps:
 
   - bash: terraform plan -var-file=${{ parameters.stage }}/env.tfvars
     displayName: Plan Terraform ${{ parameters.stage }}
+    workingDirectory: infrastructure
