--- a/pipelines/templates/init.yml
+++ b/pipelines/templates/init.yml
@@ -6,3 +6,4 @@ parameters:
 steps:
   - bash: terraform init -backend-config=${{ parameters.stage }}/backend.tfvars
     displayName: Initilise Terraform ${{ parameters.stage }}
+    workingDirectory: infrastructure
