--- a/pipelines/templates/plan.yml
+++ b/pipelines/templates/plan.yml
@@ -11,3 +11,8 @@ steps:
   - bash: terraform plan -var-file=${{ parameters.stage }}/env.tfvars
     displayName: Plan Terraform ${{ parameters.stage }}
     workingDirectory: infrastructure
+    env:
+      ARM_CLIENT_ID: $(arm_client_id)
+      ARM_CLIENT_SECRET: $(arm_client_secret)
+      ARM_TENANT_ID: $(arm_tenant_id)
+      ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
