--- a/infrastructure/azure-pipelines.yml
+++ b/infrastructure/azure-pipelines.yml
@@ -27,6 +27,11 @@ steps:
 - bash: terraform init -backend-config=$(stage)/backend.tfvars
   displayName: Initilise Terraform
   workingDirectory: infrastructure
+  env:
+    ARM_CLIENT_ID: $(arm_client_id)
+    ARM_CLIENT_SECRET: $(arm_client_secret)
+    ARM_TENANT_ID: $(arm_tenant_id)
+    ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
 
 - bash: terraform validate
   displayName: Validate Terraform
