--- a/pipelines/templates/apply.yml
+++ b/pipelines/templates/apply.yml
@@ -11,3 +11,8 @@ steps:
   - bash: terraform apply -var-file=${{ parameters.stage }}/env.tfvars -auto-approve
     displayName: Apply Terraform ${{ parameters.stage }}
     workingDirectory: infrastructure
+    env:
+      ARM_CLIENT_ID: $(arm_client_id)
+      ARM_CLIENT_SECRET: $(arm_client_secret)
+      ARM_TENANT_ID: $(arm_tenant_id)
+      ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
