add working dir/displayname for appl ssh file creation

--- a/pipelines/pipeline-test.yml
+++ b/pipelines/pipeline-test.yml
@@ -40,6 +40,8 @@ stages:
               mkdir keys
               ssh-keygen -t rsa -b 4098 -P "" -f keys/key
               ls keys
+            displayName: Create ssh key file
+            workingDirectory: infrastructure
 
           - template: templates/apply.yml
             parameters:
