--- a/pipelines/infrastructure-destroy.yml
+++ b/pipelines/infrastructure-destroy.yml
@@ -21,3 +21,8 @@ steps:
   - bash: terraform destroy -var-file=${{ parameters.stage }}/env.tfvars -auto-approve
     displayName: Destroy Terraform ${{ parameters.stage }}
     workingDirectory: infrastructure
+    env:
+      ARM_CLIENT_ID: $(arm_client_id)
+      ARM_CLIENT_SECRET: $(arm_client_secret)
+      ARM_TENANT_ID: $(arm_tenant_id)
+      ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
