--- a/pipelines/templates/init.yml
+++ b/pipelines/templates/init.yml
@@ -4,7 +4,10 @@ parameters:
   default: test
 
 steps:
-  - bash: terraform init -backend-config=${{ parameters.stage }}/backend.tfvars
+  - task: Bash@3
+    inputs:
+      targetType: 'inline'
+      script: terraform init -backend-config=${{ parameters.stage }}/backend.tfvars
     displayName: Initilise Terraform ${{ parameters.stage }}
     workingDirectory: infrastructure
     env:
