--- a/infrastructure/azure-pipelines.yml
+++ b/infrastructure/azure-pipelines.yml
@@ -20,6 +20,17 @@ strategy:
       stage: prod
 
 steps:
+  - task: Bash@3
+    displayName: Create dummy ssh key file
+    inputs:
+      workingDirectory: infrastructure
+      targetType: 'inline'
+      script: |
+        rm -rf keys
+        mkdir keys
+        touch keys/key.pub
+        ls keys
+
 - task: Bash@3
   inputs:
     workingDirectory: infrastructure
