--- a/infrastructure/azure-pipelines.yml
+++ b/infrastructure/azure-pipelines.yml
@@ -31,21 +31,13 @@ steps:
         touch keys/key.pub
         ls keys
 
-- task: Bash@3
-  inputs:
-    workingDirectory: infrastructure
-    targetType: 'inline'
-    script: terraform init -backend-config=$(stage)/backend.tfvars
-  displayName: Initilise Terraform
-  env:
-    ARM_CLIENT_ID: $(arm_client_id)
-    ARM_CLIENT_SECRET: $(arm_client_secret)
-    ARM_TENANT_ID: $(arm_tenant_id)
-    ARM_SUBSCRIPTION_ID: $(arm_subscription_id)
+  - template: pipelines/templates/init.yml
+    parameters:
+      stage: $(stage)
 
-- task: Bash@3
-  inputs:
-    workingDirectory: infrastructure
-    targetType: 'inline'
-    script: terraform validate
-  displayName: Validate Terraform
+  - task: Bash@3
+    inputs:
+      workingDirectory: infrastructure
+      targetType: 'inline'
+      script: terraform validate
+    displayName: Validate Terraform
