shuffle templates, adds deploy template, removes apply/plan

--- a/pipelines/pipeline-dev.yml
+++ b/pipelines/pipeline-dev.yml
@@ -16,7 +16,7 @@ variables:
   - name: stage
     value: dev
 
-steps:
-  - template: templates/apply.yml
+stages:
+  - template: templates/deploy.yml
     parameters:
       stage: $(stage)
