--- a/pipelines/pipeline-test.yml
+++ b/pipelines/pipeline-test.yml
@@ -13,10 +13,10 @@ pool:
 
 variables:
   - group: service_principals
-  - name: stage
+  - name: env
     value: test
 
 stages:
   - template: templates/deploy.yml
     parameters:
-      stage: $(stage)
+      env: $(env)
