--- a/pipelines/templates/init.yml
+++ b/pipelines/templates/init.yml
@@ -1,5 +1,5 @@
 parameters:
-- name: stage
+- name: env
   type: string
   default: test
 
@@ -8,8 +8,8 @@ steps:
     inputs:
       workingDirectory: infrastructure
       targetType: 'inline'
-      script: terraform init -backend-config=${{ parameters.stage }}/backend.tfvars
-    displayName: Initilise Terraform ${{ parameters.stage }}
+      script: terraform init -backend-config=${{ parameters.env }}/backend.tfvars
+    displayName: Initilise Terraform ${{ parameters.env }}
     env:
       ARM_CLIENT_ID: $(arm_client_id)
       ARM_CLIENT_SECRET: $(arm_client_secret)
