add explicit checkout step

--- a/pipelines/infrastructure-destroy.yml
+++ b/pipelines/infrastructure-destroy.yml
@@ -24,6 +24,9 @@ jobs:
         deploy:
           steps:
 
+            - checkout: self
+              clean: true
+
             - template: templates/init.yml
 
             - task: Bash@3
