--- a/pipelines/infrastructure-CI.yml
+++ b/pipelines/infrastructure-CI.yml
@@ -33,7 +33,7 @@ steps:
 
   - template: templates/init.yml
     parameters:
-      stage: $(env)
+      env: $(env)
 
   - task: Bash@3
     inputs:
