--- a/pipelines/infrastructure-CI.yml
+++ b/pipelines/infrastructure-CI.yml
@@ -20,16 +20,7 @@ strategy:
       env: prod
 
 steps:
-  - task: Bash@3
-    displayName: Create dummy ssh key file
-    inputs:
-      workingDirectory: infrastructure
-      targetType: 'inline'
-      script: |
-        rm -rf keys
-        mkdir keys
-        touch keys/key.pub
-        ls keys
+  - template: templates/dummy_ssh.yml
 
   - template: templates/init.yml
     parameters:
