update path to template

--- a/pipelines/pipeline.yml
+++ b/pipelines/pipeline.yml
@@ -72,7 +72,7 @@ stages:
                   - checkout: self
                     clean: true
 
-                  - template: init.yml
+                  - template: templates/init.yml
                     parameters:
                       env: ${{ parameters.env }}
 
